Closed
Bug 1143244
Opened 10 years ago
Closed 10 years ago
jsobj.cpp:1994:20: error: implicit conversion of nullptr constant to 'bool' [-Werror,-Wnull-conversion]
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla39
| Tracking | Status | |
|---|---|---|
| firefox39 | --- | fixed |
People
(Reporter: dholbert, Assigned: dholbert)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
1.41 KB,
patch
|
bhackett1024
:
review+
|
Details | Diff | Splinter Review |
New build warning (treated as error), using clang 3.7 (though I think this warning was introduced in clang 3.6 or earlier):
{
In file included from obj/js/src/Unified_cpp_js_src8.cpp:83:
mozilla/js/src/jsobj.cpp:1994:20: error: implicit conversion of nullptr constant to 'bool' [-Werror,-Wnull-conversion]
return nullptr;
~~~~~~ ^~~~~~~
}
This was added here, for bug 1135897:
http://hg.mozilla.org/mozilla-central/diff/9083621b0e2e/js/src/jsobj.cpp#l1.380
I suspect it's supposed to be "return false"?
| Assignee | ||
Comment 1•10 years ago
|
||
bhackett, was this what you intended here?
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #8577535 -
Flags: review?(bhackett1024)
Updated•10 years ago
|
Attachment #8577535 -
Flags: review?(bhackett1024) → review+
| Assignee | ||
Comment 2•10 years ago
|
||
| Assignee | ||
Updated•10 years ago
|
Flags: in-testsuite-
Comment 3•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in
before you can comment on or make changes to this bug.
Description
•