Bug 1143244: return false instead of nullptr, in failure case within js::XDRObjectLiteral(). r=bhackett